changed to use pyuno helper function for handling path/url

--- a/tox.ini
+++ b/tox.ini
@@ -5,8 +5,9 @@ indexserver =
     pypi = http://pypi.python.org/simple
 
 [testenv]
+sitepackages=True
 deps =
     :pypi:pytest
     :pypi:pytest-pep8
 
-commands = py.test -v --pep8 unotools tests
+commands = py.test -v --pep8 --clearcache --doctest-modules unotools tests
