added to do pyflakes test

--- a/tox.ini
+++ b/tox.ini
@@ -9,5 +9,6 @@ sitepackages=True
 deps =
     :pypi:pytest
     :pypi:pytest-pep8
+    :pypi:pytest-flakes
 
-commands = py.test -v --pep8 --clearcache --doctest-modules unotools tests
+commands = py.test -v --pep8 --flakes --clearcache --doctest-modules unotools tests
